# rust-synth

./: Cargo.toml  LICENSE
src/: main.rs
