[package]
name = "synth"
version = "0.1.0"
authors = ["JonasKjellstrom <jonas.kjellstrom@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal="0.11.0"
anyhow = "1.0.12"
itertools="0.8.2"


#[dependencies.rand]
#version = "0.7.2"
#features = ["small_rng"]


